// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountsCarousel should render normal accounts 1`] = `
<div>
  <div
    class="container"
  >
    <a
      aria-label="My Sporran Account"
      class="left"
      href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
      title="My Sporran Account"
    />
    <section>
      <div
        class="MacLachlan tartan"
      >
        Identicon
      </div>
      <div
        class="name"
      >
        <span>
          My Second Account
        </span>
        <div
          class="wrapper"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Account options"
            class="toggle"
            role="button"
            tabindex="0"
            title="Account options"
            type="button"
          />
        </div>
      </div>
    </section>
    <a
      aria-label="My Third Account"
      class="right"
      href="/account/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
      title="My Third Account"
    />
  </div>
</div>
`;

exports[`AccountsCarousel should render the first account 1`] = `
<div>
  <div
    class="container"
  >
    <a
      aria-label="Create new account"
      class="left"
      href="/account/NEW"
      title="Create new account"
    />
    <section>
      <div
        class="MacFarlane tartan"
      >
        Identicon
      </div>
      <div
        class="name"
      >
        <span>
          My Sporran Account
        </span>
        <div
          class="wrapper"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Account options"
            class="toggle"
            role="button"
            tabindex="0"
            title="Account options"
            type="button"
          />
        </div>
      </div>
    </section>
    <a
      aria-label="My Second Account"
      class="right"
      href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
      title="My Second Account"
    />
  </div>
</div>
`;

exports[`AccountsCarousel should render the last account 1`] = `
<div>
  <div
    class="container"
  >
    <a
      aria-label="My Second Account"
      class="left"
      href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
      title="My Second Account"
    />
    <section>
      <div
        class="MacPherson tartan"
      >
        Identicon
      </div>
      <div
        class="name"
      >
        <span>
          My Third Account
        </span>
        <div
          class="wrapper"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Account options"
            class="toggle"
            role="button"
            tabindex="0"
            title="Account options"
            type="button"
          />
        </div>
      </div>
    </section>
    <a
      aria-label="Create new account"
      class="right"
      href="/account/NEW"
      title="Create new account"
    />
  </div>
</div>
`;

exports[`AccountsCarousel should render the new account 1`] = `
<div>
  <div
    class="container"
  >
    <a
      aria-label="My Third Account"
      class="left"
      href="/account/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
      title="My Third Account"
    />
    <section>
      <div
        class="undefined tartan"
      >
        Identicon
      </div>
      <div
        class="name"
      >
        <span />
        <div
          class="wrapper"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Account options"
            class="toggle"
            role="button"
            tabindex="0"
            title="Account options"
            type="button"
          />
        </div>
      </div>
    </section>
    <a
      aria-label="My Sporran Account"
      class="right"
      href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
      title="My Sporran Account"
    />
  </div>
</div>
`;

exports[`AccountsCarousel should support other paths 1`] = `
<div>
  <div
    class="container"
  >
    <a
      aria-label="My Second Account"
      class="left"
      href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr/send"
      title="My Second Account"
    />
    <section>
      <div
        class="MacPherson tartan"
      >
        Identicon
      </div>
      <div
        class="name"
      >
        <span>
          My Third Account
        </span>
        <div
          class="wrapper"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Account options"
            class="toggle"
            role="button"
            tabindex="0"
            title="Account options"
            type="button"
          />
        </div>
      </div>
    </section>
    <a
      aria-label="Create new account"
      class="right"
      href="/account/NEW/send"
      title="Create new account"
    />
  </div>
</div>
`;
